--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,107 @@
-.App {
-  max-width: 900px;
-  margin: 20px auto;
-  /* height: 100vh; */
+:root {
+  --yellow: #FFCC00;
+  --gradient-1: linear-gradient(270.34deg, #500886 0%, #B40F9D 100%); 
+  --violet: #500886;
+  --pink1: #B40F9D;
+  --pink2: #F5406D;
+  --gray1: #D9D9D9;
+
 }
 
-button {
-  background: none;
-  border: 2px solid #fff;
-  padding: 6px 12px;
-  border-radius: 4px;
-  color: #fff;
-  font-weight: 400;
-  cursor: pointer;
-  font-size: 1rem;
-}
 
-button:hover {
-  background: #dfdf;
-  color: black;
-}
+/* Styles for all tablets */
+@media (min-width: 768px) and (max-width: 1024px) {
+  /* CSS rules specific to tablets */
 
-.card-grid {
-  margin-top: 20px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 30px 40px;
+
+  .App {
+    /* max-width: 900px; */
+    width: 100%;
+    margin: 20px auto;
+    /* height: 100vh; */
+  }
+
+  .new-game-btn {
+    position: relative;
+    top: 50px;
+    cursor: pointer;
+    /* margin-top: px; */
+    background: var(--gradient-1);
+    /* border: 2px solid #fff; */
+    border: none;
+    outline: none;
+    padding: 20px 60px;
+    border-radius: 20px;
+    color: #fff;
+    font-weight: 400;
+    cursor: pointer;
+    font-size: 30px;
+    font-weight: 700;
+  }
+
+  .new-game-btn:hover {
+    /* background: #dfdf; */
+    /* color: black; */
+  }
+
+  .card-grid {
+    margin-top: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 15px 20px;
+  }
+
+  /* Header CSS */
+  .header {
+    width: 100%;
+    /* z-index: 999; */
+    margin: auto;
+    /* background-color: rebeccapurple; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 20px;
+    /* flex-direction: ; */
+  }
+
+  .game-title {
+    font-size: 3rem;
+    font-weight: 900;
+    color: var(--pink1);
+  }
+
+  .pause-btn {
+    font-size: 3rem;
+    border: none;
+    outline: none;
+    background: none;
+  }
+  .pause-btn i {
+    color: #000000;
+  }
+
+  .left {
+    background: none;
+    width: 15%;
+ }
+
+  .middle {
+    width: 70%;
+    text-align: center;
+  }
+
+  .right {
+    width: 15%;
+    /* border-radius: 50%; */
+    /* background: var(--pink1); */
+    display: flex;
+    justify-content: center;
+  }
+
+  .timer-count {
+    color: var(--violet);
+  }
 }
