--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+
+}
+
 
 body {
+  font-family: 'Roboto', sans-serif;
+  width: 100%;
+  height: 100vh;
   font-family: "Poppins", sans-serif;
   margin: 0;
   font-size: 1.2rem;
@@ -8,8 +20,12 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  background: #111;
+  background: #ffcc00;
   color: #fff;
+  background-image: url(./assets/Fence.png), url(./assets/Fence.png);
+  background-repeat: no-repeat, no-repeat;
+  background-position: 120% bottom, -150px bottom;
+  background-size: 300px auto, 300px auto;
 }
 
 /* code {
