--- a/src/components/singleCard.css
+++ b/src/components/singleCard.css
@@ -1,6 +1,6 @@
 .card {
     position: relative;
-    width: 150px;
+    width: 120px;
 }
 
 .card img {
@@ -14,6 +14,10 @@
     transform: rotateY(90deg);
     transition: all ease-in 0.2s;
     position: absolute;
+}
+
+.card .front img {
+    width: 90%;
 }
 
 .flipped .front {
