--- a/src/index.css
+++ b/src/index.css
@@ -12,16 +12,16 @@ html.swal2-height-auto {
   height: 100vh;
 }
 
-body.swal2-height-auto {
-  /* position: absolute; */
+/* body.swal2-height-auto {
+  position: absolute;
   height: 100vh !important;
-}
+} */
 
 
 body {
   font-family: 'Roboto', sans-serif;
   width: 100%;
-  height: 100vh;
+  height: 100vh !important;
   font-family: "Poppins", sans-serif;
   margin: 0;
   font-size: 1.2rem;
@@ -37,6 +37,10 @@ body {
   background-size: 300px auto, 300px auto;
 }
 
+/* body.swal2-height-auto {
+  position: absolute;
+  height: 100vh !important;
+} */
 
 
 
