--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,71 @@
   --pink1: #B40F9D;
   --pink2: #F5406D;
   --gray1: #D9D9D9;
+  --white: #f1f1f1f1
 
 }
 
+
+/* Instruction Page CSS Starts */
+
+.instruction {
+  /* background: red; */
+  /* width: 100%; */
+  /* height: 100vh; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.instruction-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 90%;
+  height: 500px;
+  background: var(--white);
+  color: #000000;
+  padding: 1rem 2rem;
+  border-radius: 30px;
+  /* box-shadow: var(--box-shadow); */
+}
+
+.instruction-text-item {
+  width: 80%;
+  display: flex;
+  margin: 25px auto;
+}
+
+.instruction-text-item img {
+  width: 30px;
+  margin-right: 20px;
+}
+
+.instruction-text-item p {
+  text-align: justify;
+  font-size: 22px;
+  font-weight: 900;
+}
+
+.instruction-btn {
+  width: 200px;
+  background: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 500ms all ease-in-out;
+}
+
+.instruction-btn img {
+  width: 100%;
+}
+
+.instruction-btn:hover {
+  transform: scale(0.9);
+}
+
+/* Instruction Page CSS Ends */
 
 /* Style for Desktops */
 .App {
@@ -290,5 +352,12 @@
 
   .timer-count {
     color: var(--violet);
+  }
+
+  .instruction-box {
+    width: 85%;
+  }
+  .instruction-text-item {
+    width: 95%;
   }
 }
