--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,46 @@
 }
 
 
+/* Menu Page CSS Starts */
+.menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+}
+
+.menu-heading h1 {
+  font-size: 72px;
+  background: -webkit-linear-gradient(270.34deg, #500886 0%, #B40F9D 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: 'Luckiest Guy', cursive;
+  font-weight: 400;
+  font-size: 7rem;
+}
+
+.menu-btn {
+  margin-top: 1rem;
+  width: 120px;
+  border: none;
+  outline: none;
+  background: transparent;
+  cursor: pointer;
+  transition: 500ms all ease-in-out;
+}
+
+.menu-btn img {
+  width: 100%;
+}
+
+.menu-btn:hover {
+  transform: scale(0.9);
+}
+
+/* Menu Page CSS Ends */
+
+
 /* Instruction Page CSS Starts */
 
 .instruction {
